deployment-v4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vertx-greet-v4
spec:
  selector:
    matchLabels:
      app: vertx-greet
  replicas: 1
  template:
    metadata:
      labels:
        app: vertx-greet
        version: v4
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: vertx-greet
          image: quay.io/redhattraining/ossm-vertx-greet:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          env:
          - name: GREETING
            value: "!!! HELLO REDHAT OPENSHIFT container Platform !!!"
          - name: MAX_REQUESTS_PER_SECOND
            value: "10"
